@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.8"
-#define RUBY_RELEASE_DATE "2002-10-17"
+#define RUBY_RELEASE_DATE "2002-10-18"
 #define RUBY_VERSION_CODE 168
-#define RUBY_RELEASE_CODE 20021017
+#define RUBY_RELEASE_CODE 20021018
